@@ -60,6 +60,7 @@ Silvio Clecio <silvioprog@gmail.com>
 Robert D Kosisko <rkocisko@gmail.com>
 Tal Moaz <tmoaz@cisco.com>
 Dirk Brinkmeier
+Jose Bollo <jobol@nonadev.net>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
